[gd_scene load_steps=8 format=3 uid="uid://b858sdmb75g0x"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_fj6q6"]
[ext_resource type="Texture2D" uid="uid://cfh3q3woy6qws" path="res://graphics/enemies/scout.png" id="1_kbprm"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_ndwcc"]
[ext_resource type="AudioStream" uid="uid://cxcs51fqtno6v" path="res://audio/solid_impact.ogg" id="4_m3jog"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fmhlv"]
shader = ExtResource("2_ndwcc")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_70vk2"]
radius = 46.3249

[sub_resource type="CircleShape2D" id="CircleShape2D_rgmwd"]
radius = 782.783

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_fj6q6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_fmhlv")
position = Vector2(42, 28)
rotation = 1.5708
texture = ExtResource("1_kbprm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_70vk2")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_rgmwd")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(135, 13)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(124, -24)

[node name="Timers" type="Node" parent="."]

[node name="HitTImer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="LaserCooldown" type="Timer" parent="Timers"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_m3jog")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/HitTImer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_timer_timeout"]
